feat: use AAS DP if config